--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "chai": "^3.5.0",
     "express": "^4.13.4",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "bunyan": "^1.8.1",
+    "lodash": "^4.11.2"
   }
 }
